--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>😁 ShiJian's Personal Site</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon.ico">
+
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/MySelf.webp" alt="ShiJian picture"></td>
+            <td><img class="myself" src="images/MySelf.webp" alt="ShiJian picture"></td>
             <td><h1>Shi Jian</h1>
                 <p><em>A junior student from <strong><a href="http://218.75.197.123:83/">Hunan University of Technology</a></strong></em></p>
                 <p>I am a Web Developer. I 💗 coffee.</p></td>
@@ -67,7 +70,7 @@
     </table>
     
     <hr>
-    <a href="hobbies.html">My Hobbies</a>
+    <a id="hobbies" href="hobbies.html">My Hobbies</a>
     <a href="contact.html">Contact Me</a>
 </body>
 </html>
